@startuml
title Products Domain Class Diagram

' Classes and Attributes
class ParentProduct {
    - Reference: String
    - Brand: Brand
    - Model: String
    - Material: String
    - Season: String
    - Category: Category
    - Department: Department
    - ProductType: ProductType
    - ParentStatus: String
}

class Product {
    - EAN: String
    - Size: String
    - Color: String
    - / Stock: int [Derived]
    - / DealerPrice: float [Derived]
    - Dealer: Dealer
    - RetailPrice: float
    - Status: String
}

class Brand {
    - Name: String
    - Contact: String
    - Status: String
}

class Category {
    - Name: String
    - Description: String
    - ParentCategory: Category
    - Status: String
}

class Department {
    - Name: String
    - Description: String
    - Status: String
}

class ProductType {
    - Name: String
    - Description: String
    - Status: String
}

class Dealer {
    - Name: String
    - Description: String
    - Contact: String
    - Status: String
}

class ProductDealer {
    - UnitStock: int
    - UnitPrice: float
    - Status: String
}

' Relationships
Product --|> ParentProduct

ParentProduct "*" --> "1" Brand
ParentProduct "*" --> "1" Category
ParentProduct "*" --> "1" Department
ParentProduct "*" --> "1" ProductType

Category "0..1" <-- "1" Category : ParentCategory

Product "1" <-- "*" ProductDealer
Dealer "1" <-- "*" ProductDealer

@enduml
